tests/miniJava/neg/005539_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { void int [] java ( ) { return 0 ; } }
